--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 RealWorldCurrencyConverter/RealWorldCurrencyConverter.xcodeproj/project.pbxproj
 RealWorldCurrencyConverter/.DS_Store
+RealWorldCurrencyConverter/RealWorldCurrencyConverter/.DS_Store
+.DS_Store
