--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ RealWorldCurrencyConverter/RealWorldCurrencyConverter.xcodeproj/project.pbxproj
 RealWorldCurrencyConverter/.DS_Store
 RealWorldCurrencyConverter/RealWorldCurrencyConverter/.DS_Store
 .DS_Store
+RealWorldCurrencyConverter/.DS_Store
