--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ RealWorldCurrencyConverter/.DS_Store
 RealWorldCurrencyConverter/RealWorldCurrencyConverter/.DS_Store
 .DS_Store
 RealWorldCurrencyConverter/.DS_Store
+.DS_Store
+RealWorldCurrencyConverter/.DS_Store
+RealWorldCurrencyConverter/.DS_Store
