--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ RealWorldCurrencyConverter/.DS_Store
 .DS_Store
 RealWorldCurrencyConverter/.DS_Store
 RealWorldCurrencyConverter/.DS_Store
+RealWorldCurrencyConverter/RealWorldCurrencyConverter.xcodeproj/project.xcworkspace/xcuserdata/samli.xcuserdatad/UserInterfaceState.xcuserstate
